methods.basics.Methods.scala.error
Erreur de compilation :
Methods:8: error: not found: value a
      a = a + 1}
      ^Methods:11: error: missing argument list for method print in object Predef
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `print _` or `print(_)` instead of `print`.
print a 
^